AFDP-3207: - Rework aes encryption/decryption
Former-commit-id: 896967a946641dc4cbf97e67db11c8c1c5a154b2